--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest
     xmlns:android="http://schemas.android.com/apk/res/android"
-    package="fr.delcey.mediatorlivedataexample">
+    package="fr.delcey.mediatorlivedataexample"
+    >
 
     <application
         android:allowBackup="true"
@@ -9,11 +10,14 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.OpenClassroom_MediatorLiveDataExample">
-        <activity android:name=".MainActivity">
+        android:theme="@style/Theme.OpenClassroom_MediatorLiveDataExample"
+        >
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
